# FlyingComputer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Timeline.md  configure.py  prepare_external.sh
FlyItf/src/: FlyItf.hpp  main.cpp
FlyItf/test/: gtestmain.cpp
FlyModules/BNO055/: Logless  configure.py
FlyModules/BNO055/HwApi/: IHwApi.hpp
FlyModules/BNO055/HwApiStub/: HwApiStub.cpp
FlyModules/BNO055/PigpioHwApi/: HwApi.cpp
FlyModules/BNO055/Visualization/: poc.py  pocserver.py
FlyModules/BNO055/src/: App.cpp  App.hpp  BNO055.hpp  main.cpp
FlyModules/BNO055/test/: IHwApiMock.hpp
FlyPilot/: .gitignore  Makefile  ROAD
FlyPilot/src/: Design.puml  VertModeFsm.puml
FlyPilot/src/Contexts/: IFlightInstrumentContext.hpp  IFlightPowerContext.hpp  IUserInputContext.hpp
FlyPilot/src/PitchPowerManagement/: PitchPowerManager.hpp
FlyPilot/src/PitchPowerManagement/PowerManagement/: AutoThrottleState.cpp  AutoThrottleState.hpp  CommonThrottleState.cpp  CommonThrottleState.hpp  IThrottleEventHandler.hpp  ManualThrottleState.cpp  ManualThrottleState.hpp  PowerEvents.hpp  ThrottleEventHandler.cpp  ThrottleEventHandler.hpp  ThrottleFsm.cpp  ThrottleFsm.hpp  TogaLkThrottleState.cpp  TogaLkThrottleState.hpp
FlyPilot/src/StateMachine/: StateMachine.hpp
FlyPilot/test/mock/: FiniteStateMachineMock.hpp  FlightInstrumentContextMock.hpp  FlightPowerContextMock.hpp  ThrottleEventHandlerMock.hpp  UserInputContextMock.hpp
FlyPilot/test/ut/PitchPowerManagement/PowerManagement/: ManualThrottleStateTests.cpp
GroundStationUI/: main.js  package-lock.json  package.json
GroundStationUI/frontend/: index.html  pfd.html
Model/: fuselage.js  wing_rib.js
hal/hal/: i2c.hpp  spi.hpp  uart.hpp
hal/interface/hal/: adc.hpp  gpio.hpp  pwm.hpp  spi.hpp
halsim/: CMakeLists.txt  Config.cmake.in
halsim/client/: sim_spi.cpp
halsim/hal_client/: sim_spi.cpp
halsim/hal_ipc/: ipc.hpp  ipc_cmds.hpp  sync.hpp
halsim/hal_server/: hal_server.hpp
halsim/ipc/: ipc.hpp  ipc_cmds.hpp  sync.hpp
halsim/server/: handler.hpp  logger.hpp  main.cpp  server.hpp  utils.hpp
run/: halsim_server
